@@ -302,6 +302,9 @@ HISTORY
 
   ++ Bugfixes:
 
+  2013-03-17: Simon Goldschmidt
+  * api_msg.c: fixed bug #47448 (netconn/socket leak if RST is received during close)
+
   2013-03-17: Joel Cunningham
   * api_msg.c: don't fail closing a socket/netconn when failing to allocate the
     FIN segment; blocking the calling thread for a while is better than risking
